RESOLVED FIXED64320
Java Bridge leaks local references
https://bugs.webkit.org/show_bug.cgi?id=64320
Summary Java Bridge leaks local references
Steve Block
Reported 2011-07-11 15:32:20 PDT
In particular, see the JavaField constructors and convertNPVariantToJavaValue()
Attachments
Patch (4.68 KB, patch)
2011-07-11 15:41 PDT, Steve Block
no flags
Patch (4.72 KB, patch)
2011-07-12 01:36 PDT, Steve Block
no flags
Patch (3.10 KB, patch)
2011-08-09 07:42 PDT, Steve Block
no flags
Steve Block
Comment 1 2011-07-11 15:41:16 PDT
WebKit Review Bot
Comment 2 2011-07-11 15:52:57 PDT
Steve Block
Comment 3 2011-07-12 01:36:51 PDT
Steve Block
Comment 4 2011-08-09 07:42:46 PDT
Steve Block
Comment 5 2011-08-09 07:43:39 PDT
The relevant code in convertNPVariantToJavaValue() was moved to javaValueToJvalue() and then removed in http://trac.webkit.org/changeset/92659
WebKit Review Bot
Comment 6 2011-08-09 10:00:18 PDT
Comment on attachment 103361 [details] Patch Clearing flags on attachment: 103361 Committed r92689: <http://trac.webkit.org/changeset/92689>
WebKit Review Bot
Comment 7 2011-08-09 10:00:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.