Java Bridge leaks local references https://bugs.webkit.org/show_bug.cgi?id=64320

Reviewed by Alexey Proskuryakov.

No new tests as this is just an optimization.

* bridge/jni/jsc/JavaFieldJSC.cpp:
(JavaField::JavaField):
* bridge/jni/jsc/JavaMethodJSC.cpp:
(JavaMethod::JavaMethod):


Canonical link: https://commits.webkit.org/81775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92689 268f45cc-cd09-0410-ab3c-d52691b4dbfc