Source/WebCore/bridge/jni/jsc/JavaMethodJSC.cpp
@@ -41,7 +41,7 @@ JavaMethod::JavaMethod(JNIEnv* env, jobject aMethod)
     // Get return type name
     jstring returnTypeName = 0;
     if (jobject returnType = callJNIMethod<jobject>(aMethod, "getReturnType", "()Ljava/lang/Class;")) {
-            returnTypeName = static_cast<jstring>(callJNIMethod<jobject>(returnType, "getName", "()Ljava/lang/String;"));
+        returnTypeName = static_cast<jstring>(callJNIMethod<jobject>(returnType, "getName", "()Ljava/lang/String;"));
         if (!returnTypeName)
             returnTypeName = env->NewStringUTF("<Unknown>");
         env->DeleteLocalRef(returnType);
